2003-12-07  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (mono_marshal_method_from_wrapper): Remove assert so this
	function works on all methods.

2003-12-07  Lluis Sanchez Gual  <lluis@ximian.com>

	* domain.c, loader.h: Added IRemotingTypeInfo interface in MonoDefaults.
	* icall.c: in, ves_icall_Remoting_RealProxy_GetTransparentProxy set
	the custom_type_info flag of the transparent proxy.
	* object.c: Added method mono_object_isinst_mbyref for casting mbyref
	objects that supports IRemotingTypeInfo.
	* object.h: Added custom_type_info field in transparent proxy.

2003-12-06  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_create_from_generic): Removed.
	(mono_class_from_generic): Check `ginst->klass' before doing
	anything else.  This is important to fully support "recursive"
	generic types.

	* metadata.c (do_mono_metadata_parse_generic_inst): Create an
	empty `generic_inst->klass' before doing anything else.

2003-12-06  Dick Porter  <dick@ximian.com>

	* verify.c: 
	* object.h:
	* icall.c:
	* locales.c: Use C structs to access class fields.  Don't do a
	conversion between MonoString and UChar because both are
	platform-endian UTF-16.  Compare now takes startindex and count
	parameters.  Add a char overload for IndexOf.  Speed up the
	invariant string IndexOf.

2003-12-05  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (monosn_LDADD): Fix parallel build.

2003-12-04  Martin Baulig  <martin@ximian.com>

	* icall.c
	(ves_icall_type_GetTypeCode): Added MONO_TYPE_VAR and MONO_TYPE_MVAR.
	(ves_icall_Type_make_array_type): New interncall.	

2003-12-04  Martin Baulig  <martin@ximian.com>

	* locales.c: also change it in the !HAVE_ICU case.

2003-12-04  Dick Porter  <dick@ximian.com>

	* icall.c:
	* locales.c: construct_compareinfo is now in CompareInfo, not
	CultureInfo.

2003-12-04  Zoltan Varga  <vargaz@freemail.hu>

	* image.c (mono_image_load_file_for_image): Cache loaded images in the
	image->files array.
